# multiaccount-aws-cost-cli-tool

./: .gitignore  Cargo.toml  README.md
src/: main.rs
