
[package]
name = "aws-cost-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.5.8"
aws-sdk-costexplorer = "1.47.0"
aws-sdk-organizations = "1.47.0"
aws-sdk-sts = "1.47.0"
clap = { version = "4.5.20", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
prettytable = "0.10.0"
chrono = "0.4.38"
csv = "1.3.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"
plotters = "0.3.7"